fixed layout issue to be more acuurate with design

--- a/app/scss/components/productInfo.scss
+++ b/app/scss/components/productInfo.scss
@@ -49,7 +49,7 @@ main {
                     height: 100%;
                     background-color: #fff;
                     opacity: 0;
-                    border-radius: 1rem;
+                    border-radius: rem(8);
                     @include transition(opacity);
                 }
 
@@ -114,8 +114,7 @@ main {
 
             .topImgCtn {
                 img {
-                    width: 86% !important;
-                    height: 70vh;
+                    width: rem(445) !important;
                     object-fit: cover;
                     cursor: pointer;
                 }
@@ -127,7 +126,7 @@ main {
                 .thumImg__ctn {
                     position: relative !important;
                     cursor: pointer;
-                    border-radius: 1rem;
+                    border-radius: rem(8);
                     border: 2px solid #fff;
                     @include transition(opacity);
 
@@ -141,7 +140,7 @@ main {
                         height: 100%;
                         background-color: #fff;
                         opacity: 0;
-                        border-radius: 1rem;
+                        border-radius: rem(8);
                         @include transition;
                     }
 
